# HSgameZ

./: .gitignore  CMakeLists.txt  README.md
src/: autobattler.cpp  autobattler.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h
